# Genipilot--IntelligentAssistantForWebTaskAutomation

./: .gitignore  AGENT_ARCHITECTURE_FIXED.md  COMPLETE_AGENT_ARCHITECTURE.md  Claude resume chat.txt  README.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  agent_server.py  bakwas.txt  cdp command.txt  check_connection.py  check_user_data.py  color.txt  custom_loader.js  demo.py  main.py  mera.backup  models.py  mongodb_session.py  plan_module.py  prompt.txt  pyproject.toml  read prompt.txt  requirements.txt  runner.txt  task_scheduler.py  use-case-prompts.md  vision_module.py
.claude/: settings.local.json
extension/: background.js  background.js.backup  login.css  login.html  login.js  login.js.backup  manifest.json  offscreen.html  offscreen.js  permission.html  permission.js  sidebar.css  sidebar.html  sidebar.js  sidebar.js.backup  voice.html  voice.js
extension/icons/: generate-icons.html
templates/: about-us.html  auth.css  auth.js  automation.html  contact.html  dashboard.html  demo.txt  faqs.html  index.html  login.html  pricing.html  signup.html
templates/assets/css/: bootstrap.min.css.map  fontawesome-fonts.css  odometer.css  style.css
templates/assets/js/: dashboard.js  main.js
templates/logo/: Logo.ai  Untitled-2.ai
use-case/: use-case-prompts.md
